created HTMLpages for Project Explorer

--- a/app/public/project-explorer/index.html
+++ b/app/public/project-explorer/index.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 
-<html>
-
-<body>
-
-
-<h1>My First Heading</h1>
-
+<html lang = "en">
+ <head>
+     <meta charset="UTF-8">
+     <title>Basic Layout</title>   
+     <meta name ="viewport"
+     content = "width = device-width">
+ </head>
 <header>
 <h1> Project Explorer </h1>
 <h2> One Stop Database for Academic Projects</h2>
 </header>
 <nav>
-    <a href = "/index.html/">Home</a> 
-    <a href = "/search.html/">Projects</a>
-    <a href = "/login.html/">Login</a>
-    <a href = "/register.html/">Register</a>
-    <a href = "/createproject.html/">Submit</a>
+ <table>
+      <thead>
+          <tr>
+    <a href = "/index.html/">Home</a> &nbsp;
+    <a href = "/search.html/">Projects</a> &nbsp;
+    <a href = "/login.html/">Login</a> &nbsp;
+    <a href = "/register.html/">Register</a> &nbsp;
+    <a href = "/createproject.html/">Submit</a> &nbsp;
+         </tr>       
+</thead>
+</table>
 </nav>
+
+
 <main>
     <p>
-        <h3>
+        <h5>
             This application allows you to explore various academic projects. You can search, upload and browse projects
-        </h3>
+        </h5>
     </p>
 
-    <header>
+    <h3>
         Project List
-    </header>
+    </h3>
+    <section>
+    
+    <h4> Project 1</h4>
+
     <ul>
-        <li> Name</li>
-        <li> Description</li>
-        <li> Program</li>
-        <li> Year</li>
+        <li> Name: Project 1 </li>
+        <li> Description: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque id optio quia, doloremque itaque quam possimus. Iure accusantium consequuntur excepturi ratione sed molestiae, et doloremque reprehenderit error. Molestias, laboriosam fugiat! </li>
+        <li> Program: Computer Science </li>
+        <li> Year: 2018 </li>
+    </ul>
+        <h4> Project 2</h4>
+    <ul>
+        <li> Name: Project 2 </li>
+        <li> Description: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque id optio quia, doloremque itaque quam possimus. Iure accusantium consequuntur excepturi ratione sed molestiae, et doloremque reprehenderit error. Molestias, laboriosam fugiat! </li>
+        <li> Program: Computer Science </li>
+        <li> Year: 2019 </li>
+    </ul>
+        <h4> Project 3</h4>
+    <ul>    
+        <li> Name: Project 3 </li>
+        <li> Description: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque id optio quia, doloremque itaque quam possimus. Iure accusantium consequuntur excepturi ratione sed molestiae, et doloremque reprehenderit error. Molestias, laboriosam fugiat! </li>
+        <li> Program: Computer Science </li>
+        <li> Year: 2020 </li>
     </ul>
 
+</section>
 </main>
 
-
-</body>
 
 </html>
