Created HTML pages for Project Explorer

--- a/app/public/project-explorer/index.html
+++ b/app/public/project-explorer/index.html
@@ -3,28 +3,26 @@
 <html lang = "en">
  <head>
      <meta charset="UTF-8">
-     <title>Basic Layout</title>   
+     <title>project explorer</title>   
      <meta name ="viewport"
      content = "width = device-width">
  </head>
+ <body>
 <header>
 <h1> Project Explorer </h1>
 <h2> One Stop Database for Academic Projects</h2>
 </header>
 <nav>
- <table>
-      <thead>
-          <tr>
-    <a href = "/index.html/">Home</a> &nbsp;
-    <a href = "/search.html/">Projects</a> &nbsp;
-    <a href = "/login.html/">Login</a> &nbsp;
-    <a href = "/register.html/">Register</a> &nbsp;
-    <a href = "/createproject.html/">Submit</a> &nbsp;
-         </tr>       
-</thead>
-</table>
-</nav>
+      
 
+    <a href='index.html'>Home</a> 
+    <a href='search.html'>Projects</a> 
+    <a href='login.html'>Login</a> 
+    <a href='register.html'>Register</a> 
+    <a href='createproject.html'>Submit</a> 
+                
+</nav>
+</body>
 
 <main>
     <p>
