--- a/app/public/project-explorer/createproject.html
+++ b/app/public/project-explorer/createproject.html
@@ -3,22 +3,21 @@
 <h1> Project Explorer </h1>
 <h2> One Stop Database for Academic Projects</h2>
 </header>
-<nav>
- <table>
-      <thead>
-          <tr>
-    <a href = "/index.html/">Home</a> &nbsp;
-    <a href = "/search.html/">Projects</a> &nbsp;
-    <a href = "/login.html/">Login</a> &nbsp;
-    <a href = "/register.html/">Register</a> &nbsp;
 
-         </tr>       
-</thead>
-</table>
+<nav>
+ 
+     <a href='index.html'>Home</a> 
+     <a href='search.html'>Projects</a> 
+     <a href='login.html'>Login</a> 
+     <a href='register.html'>Register</a> 
+     <a href='createproject.html'>Submit</a> 
+
 </nav>
+<main>
+  <div>
 <h2> Submit Project</h2>
 
-<form>
+<form name = "submitProject">
 
    <label>Project Name:</label>
      <input type = "text" name = "name">
@@ -42,4 +41,8 @@
      <br> <br> 
      <input type = "submit" >
 
-</form>
+        </form>
+  </div>
+</main>
+</html>
+
