--- a/app/public/project-explorer/editproject.html
+++ b/app/public/project-explorer/editproject.html
@@ -6,13 +6,13 @@
 <nav>
  <table>
       <thead>
-          <tr>
-    <a href = "/index.html/">Home</a> &nbsp;
-    <a href = "/search.html/">Projects</a> &nbsp;
-    <a href = "/login.html/">Login</a> &nbsp;
-    <a href = "/register.html/">Register</a> &nbsp;
-
-         </tr>       
+        <a href='index.html'>Home</a> 
+        <a href='search.html'>Projects</a> 
+        <a href='login.html'>Login</a> 
+        <a href='register.html'>Register</a> 
+        <a href='createproject.html'>Submit</a>       
+    
+               
 </thead>
 </table>
 </nav>
