--- a/app/public/project-explorer/login.html
+++ b/app/public/project-explorer/login.html
@@ -12,12 +12,13 @@
 <h2> One Stop Database for Academic Projects</h2>
 </header>
 <nav>
-          <tr>
-    <a href = "/index.html/">Home</a> &nbsp;
-    <a href = "/search.html/">Projects</a> &nbsp;
-    <a href = "/login.html/">Login</a> &nbsp;
-    <a href = "/register.html/">Register</a> &nbsp;
-         </tr> 
+
+     <a href='index.html'>Home</a> 
+     <a href='search.html'>Projects</a> 
+     <a href='login.html'>Login</a> 
+     <a href='register.html'>Register</a> 
+     <a href='createproject.html'>Submit</a> 
+      
          
 </nav>
 
