--- a/app/public/project-explorer/viewproject.html
+++ b/app/public/project-explorer/viewproject.html
@@ -6,20 +6,20 @@
 <nav>
  <table>
       <thead>
-          <tr>
-    <a href = "/index.html/">Home</a> &nbsp;
-    <a href = "/search.html/">Projects</a> &nbsp;
-    <a href = "/login.html/">Login</a> &nbsp;
-    <a href = "/register.html/">Register</a> &nbsp;
-
-         </tr>       
+          
+     <a href='index.html'>Home</a> 
+     <a href='search.html'>Projects</a> 
+     <a href='login.html'>Login</a> 
+     <a href='register.html'>Register</a> 
+     <a href='createproject.html'>Submit</a> 
+    
 </thead>
 </table>
 </nav>
 
 <section>
 <h4>Project 1</h4>
-<a href = "/editproject.html/">Edit Project</a>
+<a href = "editproject.html">Edit Project</a>
 
 <Ul>
 <li> Created by: Jane Doe </li>
@@ -43,7 +43,7 @@ Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea unde tempore quia v
 <ul>
 <li> Authors: John Doe, Jane Doe</li>
 <li> Tags: #Asphyxia, #GSW</li>
-<li>Project Files: <a href = "/File 1, File 2">File 1, File 2</a> </li>
+<li>Project Files: <a href = "File 1, File 2">File 1, File 2</a> </li>
 
 </ul>
 
