--- a/app/public/project-explorer/register.html
+++ b/app/public/project-explorer/register.html
@@ -48,7 +48,7 @@
      <label Program:> Program: </label>
      <select name = "program" >   
             <option
-        value="computer_Science">Computer Science</option>
+        value="computer_science">Computer Science</option>
             <option
         value="computer_information_systems">Computer Information Systems</option>
             <option
